--- a/css/styles.css
+++ b/css/styles.css
@@ -324,7 +324,7 @@ img {
     color: var(--full-white-text);
 }
 
-.footer-conection{}
+/* .footer-conection{} */
 
 .footer-conection__text {
     font-weight: 700;
