--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -5,7 +5,7 @@
 */
 
 /* Variable */
-/* :root {
+:root {
     /* Text colors */
     --full-black-text: #000000;
     --full-white-text: #FFFFFF;
@@ -40,7 +40,7 @@
 
     /* Transition for :hover & :focus */
     --animation-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 /* Standard features */
 body {
