--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -8,15 +8,15 @@ body {
 }
 
 /* Delete all points near the list of items */
-.list {
-    list-style: none;
-}
+// .list {
+//     list-style: none;
+// }
 
 /* Remove standart decoration for links */
-.link {
-    text-decoration: none;
-    color: currentColor;
-}
+// .link {
+//     text-decoration: none;
+//     color: currentColor;
+// }
 
 /* Global reset */
 h1,
