--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,145 @@
+/*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+*,
+::after,
+::before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+     tab-size: 4;
+}
+
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+body {
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+}
+
+hr {
+  height: 0;
+  color: inherit;
+}
+
+abbr[title] {
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: ui-monospace, SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
+  font-size: 1em;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+table {
+  text-indent: 0;
+  border-color: inherit;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+[type=button],
+[type=reset],
+[type=submit],
+button {
+  -webkit-appearance: button;
+}
+
+::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
+legend {
+  padding: 0;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+summary {
+  display: list-item;
+}
+
 /* Variable */
 :root {
   /* Text colors */
@@ -44,12 +186,21 @@
 }
 
 /* Conteiner for elements */
-.client__container, .team__container, .work__container, .benefit__container, .footer__container, .header__container {
+.portfolio__container, .client__container, .team__container, .work__container, .benefit__container, .footer__container, .header__container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.work__list, .header-contact {
+  list-style: none;
+}
+
+.header-contact__link {
+  text-decoration: none;
+  color: currentColor;
 }
 
 /* ***Main sections*** */ /* Standard features */
@@ -62,16 +213,7 @@ body {
 }
 
 /* Delete all points near the list of items */
-.list {
-  list-style: none;
-}
-
 /* Remove standart decoration for links */
-.link {
-  text-decoration: none;
-  color: currentColor;
-}
-
 /* Global reset */
 h1,
 h2,
@@ -305,7 +447,7 @@ Model windows and overlay
   background-color: transparent;
   cursor: pointer;
 }
-.modal-form__close-btn:hover .close-icon, .modal-form__close-btn:focus .close-icon {
+.modal-form__close-btn:hover .modal-form__close-icon, .modal-form__close-btn:focus .modal-form__close-icon {
   fill: var(--blue-color);
 }
 .modal-form__close-icon {
@@ -315,7 +457,7 @@ Model windows and overlay
 }
 
 /* Feedback form */
-feedback-form__title {
+.feedback-form__title {
   display: block;
   font-weight: 700;
   font-size: 20px;
@@ -324,7 +466,7 @@ feedback-form__title {
   color: var(--gray-black-text);
   margin-bottom: 12px;
 }
-feedback-form__group {
+.feedback-form__group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -335,7 +477,7 @@ feedback-form__group {
   gap: 10px;
   margin-bottom: 20px;
 }
-feedback-form__label {
+.feedback-form__label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -347,17 +489,17 @@ feedback-form__label {
   width: 100%;
   cursor: pointer;
 }
-feedback-form__id-data {
+.feedback-form__id-data {
   font-size: 12px;
   line-height: 1.1666666667;
   letter-spacing: 0.01em;
   color: var(--gray-text);
   margin-bottom: 4px;
 }
-feedback-form__wrap {
+.feedback-form__wrap {
   position: relative;
 }
-feedback-form__input {
+.feedback-form__input {
   height: 40px;
   width: 100%;
   padding: 12px 42px;
@@ -367,11 +509,11 @@ feedback-form__input {
   -webkit-transition: border var(--animation-time);
   transition: border var(--animation-time);
 }
-feedback-form__input:hover, feedback-form__input:focus {
+.feedback-form__input:hover, .feedback-form__input:focus {
   border: 1px solid var(--blue-color);
   outline: none;
 }
-feedback-form__icon {
+.feedback-form__icon {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -381,10 +523,10 @@ feedback-form__icon {
   -webkit-transition: fill var(--animation-time);
   transition: fill var(--animation-time);
 }
-feedback-form__input:hover + feedback-form__icon, feedback-form__input:focus + feedback-form__icon {
+.feedback-form__input:hover + .feedback-form__icon, .feedback-form__input:focus + .feedback-form__icon {
   fill: var(--blue-color);
 }
-feedback-form__comment {
+.feedback-form__comment {
   display: block;
   resize: none;
   padding: 12px 16px;
@@ -394,31 +536,31 @@ feedback-form__comment {
   border-radius: var(--radius);
   cursor: pointer;
 }
-feedback-form__comment:hover, feedback-form__comment:focus {
+.feedback-form__comment:hover, .feedback-form__comment:focus {
   border-color: var(--blue-color);
   outline: 0;
 }
-feedback-form__comment::-webkit-input-placeholder {
+.feedback-form__comment::-webkit-input-placeholder {
   line-height: 1.1428571429;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-feedback-form__comment::-moz-placeholder {
+.feedback-form__comment::-moz-placeholder {
   line-height: 1.1428571429;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-feedback-form__comment:-ms-input-placeholder {
+.feedback-form__comment:-ms-input-placeholder {
   line-height: 1.1428571429;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-feedback-form__comment::-ms-input-placeholder {
+.feedback-form__comment::-ms-input-placeholder {
   line-height: 1.1428571429;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-feedback-form__comment::placeholder {
+.feedback-form__comment::placeholder {
   line-height: 1.1428571429;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
@@ -496,13 +638,13 @@ feedback-form__comment::placeholder {
   cursor: pointer;
   margin-bottom: 30px;
 }
-.checkbox .checkbox__disc {
+.checkbox__disc {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
-.checkbox .checkbox__disc-link {
+.checkbox__disc-link {
   color: var(--blue-color);
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -510,29 +652,68 @@ feedback-form__comment::placeholder {
   -webkit-transition: color var(--animation-time);
   transition: color var(--animation-time);
 }
-.checkbox .checkbox__disc-link:hover,
-.checkbox .checkbox__disc-link:focus {
+.checkbox__disc-link:hover, .checkbox__disc-link:focus {
   color: --blue-accent-color;
 }
-.checkbox .checkbox__icon--unchecked {
+.checkbox__icon--unchecked {
   opacity: 1;
   -webkit-transition: opacity var(--animation-time);
   transition: opacity var(--animation-time);
 }
-.checkbox .checkbox__icon--checked {
+.checkbox__icon--checked {
   opacity: 0;
   -webkit-transition: opacity var(--animation-time);
   transition: opacity var(--animation-time);
 }
-.checkbox .checkbox__input:hover + .checkbox__icon .checkbox__icon--unchecked,
-.checkbox .checkbox__input:focus + .checkbox__icon .checkbox__icon--unchecked {
+.checkbox__input:hover + .checkbox__icon .checkbox__icon--unchecked, .checkbox__input:focus + .checkbox__icon .checkbox__icon--unchecked {
   fill: var(--blue-color);
 }
-.checkbox .checkbox__input:checked + .checkbox__icon .checkbox__icon--unchecked {
+.checkbox__input:checked + .checkbox__icon .checkbox__icon--unchecked {
   opacity: 0;
 }
-.checkbox .checkbox__input:checked + .checkbox__icon .checkbox__icon--checked {
+.checkbox__input:checked + .checkbox__icon .checkbox__icon--checked {
   opacity: 1;
+}
+
+/* Colection parameters for filter bottons of Portfolio page */
+.filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+  /* Filtration buttons for portfolio */
+}
+.filter__button {
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  border-radius: var(--radius);
+  border-color: transparent;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: var(--gray-black-text);
+  background-color: var(--nearby-white);
+  cursor: pointer;
+  -webkit-transition: color var(--animation-time), background-color var(--animation-time), -webkit-box-shadow var(--animation-time);
+  transition: color var(--animation-time), background-color var(--animation-time), -webkit-box-shadow var(--animation-time);
+  transition: color var(--animation-time), background-color var(--animation-time), box-shadow var(--animation-time);
+  transition: color var(--animation-time), background-color var(--animation-time), box-shadow var(--animation-time), -webkit-box-shadow var(--animation-time);
+}
+.filter__button:hover, .filter__button:focus, .filter__button--active {
+  color: var(--full-white-text);
+  background-color: var(--blue-color);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Navigation panel */
@@ -890,4 +1071,74 @@ feedback-form__comment::placeholder {
 }
 .client__icon {
   fill: currentColor;
+}
+
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.portfolio-prj__link {
+  display: block;
+  -webkit-transition: -webkit-box-shadow var(--animation-time);
+  transition: -webkit-box-shadow var(--animation-time);
+  transition: box-shadow var(--animation-time);
+  transition: box-shadow var(--animation-time), -webkit-box-shadow var(--animation-time);
+}
+.portfolio-prj__link:hover, .portfolio-prj__link:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-prj__thumb {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-prj__overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+  -webkit-transition: -webkit-transform var(--animation-time);
+  transition: -webkit-transform var(--animation-time);
+  transition: transform var(--animation-time);
+  transition: transform var(--animation-time), -webkit-transform var(--animation-time);
+  background-color: rgba(33, 150, 243, 0.9);
+}
+.portfolio-prj__link:hover .portfolio-prj__overlay, .portfolio-prj__link:focus .portfolio-prj__overlay {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+.portfolio-prj__discr {
+  padding-left: 24px;
+  padding-right: 24px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--full-white-text);
+}
+.portfolio-prj__text {
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  border-right: 1px solid var(--gray-border-line);
+  border-bottom: 1px solid var(--gray-border-line);
+  border-left: 1px solid var(--gray-border-line);
+}
+.portfolio-prj__title {
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--gray-black-text);
+}
+.portfolio-prj__direction {
+  font-size: 16px;
+  line-height: 1.88;
 }/*# sourceMappingURL=main.css.map */
