--- a/scss/layout/_work-section.scss
+++ b/scss/layout/_work-section.scss
@@ -5,6 +5,10 @@
         @extend %container;
     }
 
+    &__list{
+        @extend %reset-list;
+    }
+
     &__thumb {
         position: relative;
     }
