--- a/scss/components/_social-networks.scss
+++ b/scss/components/_social-networks.scss
@@ -1,10 +1,14 @@
 .social-network {
+    @extend %reset-list;
+
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
 
     &__link {
+        @extend %reset-link;
+
         display: flex;
         align-items: center;
         justify-content: center;
