--- a/scss/layout/_footer-contact.scss
+++ b/scss/layout/_footer-contact.scss
@@ -1,5 +1,10 @@
 .footer-contact {
+    @extend %reset-list;
     font-style: normal;
+
+    &__data{
+        @extend %reset-list;
+    }
 
     &__item:not(:last-child) {
         display: block;
@@ -7,6 +12,8 @@
     }
 
     &__link {
+        @extend %reset-link;
+
         padding: 5px 0;
         color: var(--full-white-text);
         transition: color var(--animation-time);
@@ -18,6 +25,7 @@
     }
 
     &__link--color {
+        @extend %reset-link;
         padding: 5px 0;
         color: rgba(255, 255, 255, 0.6);
 
