--- a/scss/layout/_header-site-nav.scss
+++ b/scss/layout/_header-site-nav.scss
@@ -1,11 +1,15 @@
 /* Header - navigator */
 
 .site-nav {
+    @extend %reset-list;
+    
     display: flex;
     gap: 50px;
     color: var(--gray-black-text);
 
     &__link{
+    @extend %reset-link;
+
     padding-top: 32px;
     padding-bottom: 32px;
 
