--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -33,7 +33,7 @@
         background-color: var(--blue-accent-color);
     }
 
-    &__icon--color {
+    &__icon {
         margin-left: 10px;
         fill: var(--full-white-text);
     }
