--- a/scss/components/_social-networks.scss
+++ b/scss/components/_social-networks.scss
@@ -26,6 +26,14 @@
         background-color: var(--blue-color);
         fill: var(--full-white-text);
     }
+
+    &__link--color {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    
+    &__icon--color {
+        fill: var(--full-white-text);
+    }
 }
 
 
