Changes after mentor`s review

--- a/scss/layout/_benefit_section.scss
+++ b/scss/layout/_benefit_section.scss
@@ -1,7 +1,7 @@
 /* Benefit section */
 
 .benefit{
-    @include section-padding();
+    @extend %section-padding;
 
     &__container{
         @extend %container;
