--- a/scss/layout/_team-section.scss
+++ b/scss/layout/_team-section.scss
@@ -6,7 +6,7 @@
     margin-right: auto;
     background-color: var(--gray-background);
 
-    @include section-padding();
+    @extend %section-padding;
 
     &__container {
         @extend %container;
