--- a/css/main.css
+++ b/css/main.css
@@ -170,21 +170,6 @@ summary {
   --animation-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Hide element */
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 /* Conteiner for elements */
 .portfolio__container, .client__container, .team__container, .work__container, .benefit__container, .footer__container, .header__container {
   width: 1200px;
@@ -192,6 +177,12 @@ summary {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* ***Sections padding */
+.portfolio, .client, .team, .work, .benefit {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .portfolio-prj, .client__set, .team__list, .work__list, .benefit__list, .footer-contact__data, .footer-contact, .footer__list, .header-contact, .site-nav, .filter, .social-network {
@@ -203,7 +194,7 @@ summary {
   color: currentColor;
 }
 
-/* ***Main sections*** */ /* Standard features */
+/* Standard features */
 body {
   font-family: Roboto, sans-serif;
   font-size: 14px;
@@ -212,8 +203,10 @@ body {
   letter-spacing: 0.03em;
 }
 
-/* Delete all points near the list of items */
-/* Remove standart decoration for links */
+.no-scroll {
+  overflow: hidden;
+}
+
 /* Global reset */
 h1,
 h2,
@@ -237,13 +230,19 @@ img {
   height: auto;
 }
 
-.no-scroll {
+/* Hide element */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-/* Remove from visible space */
-.none-visualisation {
-  visibility: hidden;
 }
 
 /* Features and calculation of "flex-containers" contents */
@@ -944,10 +943,6 @@ Model windows and overlay
 }
 
 /* Benefit section */
-.benefit {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .benefit__list .card-item {
   --card-numbers: 4;
 }
@@ -980,8 +975,7 @@ Model windows and overlay
 }
 
 .work {
-  padding-top: 0px;
-  padding-bottom: 94px;
+  padding-top: 0;
 }
 .work__thumb {
   position: relative;
@@ -1008,8 +1002,6 @@ Model windows and overlay
   margin-left: auto;
   margin-right: auto;
   background-color: var(--gray-background);
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 .team__content {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1044,10 +1036,6 @@ Model windows and overlay
 }
 
 /* Clients-list section */
-.client {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .client__set .card-item {
   --card-numbers: 6;
 }
@@ -1075,10 +1063,6 @@ Model windows and overlay
   fill: currentColor;
 }
 
-.portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .portfolio-prj__link {
   display: block;
   -webkit-transition: -webkit-box-shadow var(--animation-time);
