--- a/scss/layout/_portfolio-section&projects.scss
+++ b/scss/layout/_portfolio-section&projects.scss
@@ -1,7 +1,7 @@
 // Portfolio spatial distribution
 
 .portfolio{
-    @include section-padding();
+    @extend %section-padding;
     
     &__container {
         @extend %container;
@@ -57,7 +57,6 @@
         line-height: 1.56;
         color: var(--full-white-text);
     }
-
 
     &__text {
         padding-top: 20px;
