--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,18 +2,14 @@
 
 @import "./utils/normalize";
 @import "./utils/variables";
-@import "./utils/visually-hidden";
 @import "./utils/placeholders";
-@import "./utils/mixin";
-
 
 
 // Base
 
+@import "./base/base";
 @import "./base/reset";
-@import "./base/no-scrol";
-@import "./base/no-visualisation";
-
+@import "./base/visually-hidden";
 
 
 // Components
